Fix header alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,7 @@ main {
     align-items: center;
 }
 
-img {
+.logo {
     width: 300px;
     height: 110px;
     margin-bottom: 10px;
